# Fact-Checking-Agent-LLionelMessi

./: .gitignore  README.md  RFC-FactCheckingAgent-v2.txt  pyproject.toml  requirements.txt
docs/: milestones.md
src/: __init__.py
src/agent/: __init__.py  orchestrator.py
src/claim_processing/: __init__.py  decomposer.py  stance_classifier.py  text_cleaner.py
src/config/: settings.py
src/data_ingestion/: README.md  __init__.py
src/data_ingestion/datasets/: __init__.py  base.py  fever.py  politifact.py
src/data_ingestion/indexing/: __init__.py  chroma_index.py  embedder.py
src/data_ingestion/preprocessing/: __init__.py  text_cleaner.py
src/data_ingestion/retriever/: __init__.py  evidence_retriever.py
src/data_ingestion/triples/: __init__.py  triple_generator.py
src/model_training/: README.md  __init__.py  data_prep.py  train_dpo.py  train_sft.py  training_commands.ipynb
src/scoring/: __init__.py  credibility_scorer.py
src/scripts/: build_index.py  download_data.py  evaluate_baseline.py  evaluate_pipeline.py  run_demo.py  validate_corpus.py
src/synthesis/: __init__.py  verdict_synthesizer.py
tests/: test_claim_processing.py  test_datasets.py  test_integration.py  test_model_inference.py  test_orchestrator.py  test_preprocessing.py  test_retriever.py  test_scoring.py  test_synthesis.py  test_triples.py
